decafcomp/llvm/test/ok-return.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/test/ok-return.llvm:6:7: error: value doesn't match function result type 'i32'
  ret void
      ^
